crates/ros-z/tests/ui/message_derive/generic_tuple_struct.rs
use ros_z::Message;
use serde::{Deserialize, Serialize};

#[derive(Debug, Clone, Serialize, Deserialize, Message)]
struct GenericTuple<T>(T);

fn main() {}
